# AGENTS

./: .gitignore
OP_SHELL/: cli.py  pyproject.toml  readme.md  requirements.txt
OP_SHELL/config/: policies.yaml
OP_SHELL/core/: audit.py  executor.py  parser.py  rbac.py  rollback.py  rules.py
OP_SHELL/images/: Dockerfile
OP_SHELL/model/: models.py
OP_SHELL/rules/: sre.yaml
OP_SHELL/tests/: test_parser.py
